tested with group configuration, horrible naming urls

--- a/templates/mychat/main.html
+++ b/templates/mychat/main.html
@@ -8,6 +8,7 @@
  <body>
  <ol id = 'all_messages'></ol>
  <input type = 'text' id = 'user_input'>
+ {{ user.username }}
  <input type = 'submit' value = 'Submit' id = 'submit_button'>
   <script src = '{% static "js/jquery-2.1.4.js" %}'></script>
   <script src = '{% static "js/ws4redis.js" %}'></script>
